# WikiStats

./: .gitignore  .gitmodules  README.md  backup-stats.sh  build-binaries.sh  docker-compose.yml  env.example  run_stats.sh  trigger-update.sh
WikiGame/: .gitignore  Dockerfile  deploy-cli.sh  deploy-github.sh  deploy.sh  docker-build.sh
WikiGame/cli/: Cargo.toml
WikiGame/cli/src/: args.rs  main.rs  testdata.rs
WikiGame/lib/: .gitignore  Cargo.toml
WikiGame/lib/src/: bench.rs  calc.rs  download.rs  ehh.rs  lib.rs  process.rs  scrape.rs  stats.rs  utils.rs  validate.rs  web.rs
WikiGame/server/: Cargo.toml
WikiGame/server/src/: main.rs
igraph/: .gitignore  categories.py  categories_clusters.py  main.py  plot-histograms.py  plot-test.py  requirements.txt
task-scheduling/: Dockerfile  celerybeat-schedule  clear-redis.sh  dump.rdb  env_vars.py  example.env  handlers.py  now.py  rabbitmq.conf  readme.md  requirements.txt  run-enqueuer.sh  run-scheduler.sh  run-worker.sh  task-enqueuer.py  task-schedule.json  task-schedule2.json  task_enqueuer.py  tasks.py  utils.py
web-server/: .dockerignore  .gitignore  .prettierrc  Dockerfile  Dockerfile-runtime  README.md  astro.config.mjs  deploy.sh  docker-build-local.sh  docker-build.sh  docker-deploy.sh  docker-run.sh  drizzle.config.json  example.env  package-lock.json  package.json  pnpm-lock.yaml  postcss.config.cjs  stats-schema.json  stats.json  tailwind.config.mjs  tsconfig.json  validate-docker-setup.sh
web-server/drizzle/: schema.ts
web-server/public/: robots.txt
web-server/src/: constants.ts  content.config.ts  graph.ts  utils-server.ts  utils.ts  wiki-api.ts
wiki-stats-rs/: Cargo.toml  Dockerfile  README.md  deploy-rsync.sh
wiki-stats-rs/cli/: Cargo.toml
wiki-stats-rs/cli/src/: args.rs  logging.rs  main.rs  testdata.rs  utils.rs  validation.rs
wiki-stats-rs/cli/src/commands/: db.rs  debug.rs  mod.rs  stats.rs  tasks.rs
wiki-stats-rs/lib/: Cargo.toml
wiki-stats-rs/lib/src/: bench.rs  download.rs  lib.rs  process.rs  statsBIGFILE.rs  utils.rs  validate.rs  web.rs
wiki-stats-rs/lib/src/calc/: bfs.rs  connected_components.rs  floyd_warshall.rs  mod.rs
wiki-stats-rs/lib/src/sqlite/: category_links.rs  diff.rs  load.rs  mod.rs  page_links.rs  paths.rs  title_id_conv.rs  to_sqlite.rs  wiki.rs
wiki-stats-rs/lib/src/stats/: io.rs  mod.rs  queries.rs  samples.rs  stats.rs  utils.rs
wiki-stats-rs/lib/tests/data/: dewiki-20240901-linktarget-small.sql  dewiki-20240901-pagelinks-small.sql
wiki-stats-rs/lib/tests/data/small/: test-20240901-linktarget.sql
wiki-stats-rs/server/: Cargo.toml
(+151 files in other folders)
