[package]
name = "server"
version = "0.1.1"
edition = "2021"

[dependencies.rusqlite]
version = "0.32.1"
features = ["bundled"]


[dependencies]
openssl = { version = "0.10", features = ["vendored"] }

axum = "0.7.5"
lazy_static = "1.4.0"
serde_json = "1.0.115"
tokio = "1.37.0"
wiki-stats = {path = "../lib"}

parse-mediawiki-sql = { version="0.10.0", features= ["utils", "serialization"] }
axum-streams = { version = "0.14.2", features=["json", "protobuf", "text"] }
serde = { version = "1.0.197", features = ["derive"] }
futures = "0.3.30"
tokio-stream = "0.1.15"
async-stream = "0.3.5"
dotenv = "0.15.0"
clap = { version = "4.5.47", features = ["derive", "cargo"] }
simplelog = "0.12.2"
dirs = "5.0.1"
log = "0.4.28"
