[package]
name = "cli"
version = "0.3.1"
edition = "2024"

[dependencies]
wiki-stats = {path = "../lib"}
tokio = { version = "1.0.0", features = ["rt", "rt-multi-thread", "macros"] }
dotenv = "0.15.0"
parse-mediawiki-sql = { version="0.10.0", features= ["utils", "serialization"] }
chrono = "0.4.37"
indicatif = "0.17.8"
clap = { version = "4.5.47", features = ["derive", "cargo"] }
log = "0.4.22"
reqwest = { version = "0.12.7", features = []}
anyhow = "1.0.86"
colored = "2.1.0"
rusqlite = "0.32.1"
simplelog = "0.12.2"
dirs = "5.0.1"

schemars = "1.0.4"
serde_json = "1.0.127"

clap_complete = "4.5.26"
