[package]
name = "wiki-stats"
version = "0.1.2"
edition = "2024"

[dependencies]


reqwest = { version = "0.12.7", features = ["blocking", "stream", "json", "gzip"] }
nipper = "0.1.9"
indicatif = "0.17.1"
bzip2 = "0.4.3"
quick-xml = "0.25.0"
serde_json = "1.0.85"
serde = {version="1.0.145", features=["derive"]}
num-format = "0.4.3"
nom = "7.1.1"
fxhash = "0.2.1"
crossbeam = "0.8.4"
spinners = "4.1.1"
lazy_static = "1.4.0"
chrono = "0.4.35"
async-stream = "0.3.5"
futures = "0.3.30"
tokio = { version = "1.36.0", features = ["rt", "rt-multi-thread", "macros", "sync"] }
colored = "2.1.0"
url = "2.5.0"
urlencoding = "2.1.3"
md5 = "0.7.0"
flate2 = "1.0.28"
tar = "0.4.40"
rusqlite = "0.32.1"

parse-mediawiki-sql = { version="0.10.0", features= ["utils", "serialization"] }
itertools = "0.12.1"
futures-util = "0.3.30"
log = "0.4.21"

thiserror = "1.0.63"
anyhow = "1.0.87"

scraper = "0.20.0"
regex = "1.10.6"
uuid = { version = "1.10.0", features = ["v4"] }

schemars = "1.0.4"

[dev-dependencies]
dotenv = "0.15.0"
rand = "0.8.5"
tempfile = "3.12.0"

#[profile.test]
#inherits = "release"